openadaptor3 production 3.4.3 Release Notes

See licence.txt for Licence information.
=================================================

Date: est. September 2008
Author: openadaptor Core Team

openadaptor 3.4.3
=======

Connectors
==========

 * New DynamicFileWriteConnector allows writing to files with names dynamically 
   derived from a message payload (SC68). 

Processors
==========

Examples
========

 * Added example of a file write connector with dynamically derived file names
   (example\spring\connectors\file\file-dynamic.xml).

Miscellaneous
=============

 * SpringAdaptor will automatically configure and register an Adaptor and associated Router
   in the Spring context if they are not explicitly defined. This allows simple Adaptor
   configurations to be defined just by declaring an ordered set of IComponents.
   A bean defined with an id of ExceptionProcessor will be automatically set as the Router's 
   exceptionProcessor.
   
Bug Fixes
=========



=================================================
openadaptor3 production 3.4.2 Release Notes

See licence.txt for Licence information.
=================================================

Date: 18th July 2008
Author: openadaptor Core Team

openadaptor 3.4.2
=======

Connectors
==========

 * JDBCReadConnector & JDBCWriteConnector - preambleSQL and postambleSQL properties
   renamed to afterConnectSql and beforeDisconnectSql, respectively. Setters for 
   old properties have been deprecated.

 * JDBCReadConnector - new properties, preReadSql and postReadSql, get executed
   before the 'main' SQL that returns a result set, and after the result set
   has been read, respectively.

 * JDBCWriteConnector#connect - additional safety checks to allow a subclass 
   to use the connection from this class at the same time not using the sqlWriter.
   
 * JDBCWriteConnector - the two ISQLWriter implementations MapTableWriter and
   MapCallableStatementWriter have moved to the new 