@@ -15,6 +15,9 @@ Connectors
 
  * New DynamicFileWriteConnector allows writing to files with names dynamically 
    derived from a message payload (SC68). 
+   
+ * FileWriteConnector - ported rollover (based on file size) functionality from legacy
+   Openadaptor.   
 
 Processors
 ==========
